--- a/CV_data/resume.tex
+++ b/CV_data/resume.tex
@@ -177,6 +177,8 @@
             & A CUDA implementation of the $NC^2$ algorithm for the word problem in hyperbolic groups (\href{https://github.com/sayantangkhan/word-problem-cuda}{github.com/sayantangkhan/word-problem-cuda}). \\
  & \\
 
+\end{tabular}
+\noindent \begin{tabular}{@{} p{0.2\linewidth} p{0.85\linewidth}}
   \Large{Service}
             \directlua{
             require("lualibs.lua")
